--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <div class="content" style="height: 300vh;">
         <div class="page_center">
             <div>
-                <img src="src/logo_simple.svg" class="titleimage" style="object-position:50% 0%;">
+                <div class="titleimagewrapper">
+                    <img src="src/logo_simple.svg" class="titleimage" style="object-position:50% 0%;top:0;">
+                </div>
             </div>
             <div style="visibility: hidden;">
                 <div class="titlecaption">第70回筑駒文化祭</div>
@@ -55,7 +57,10 @@
             </div>
         </div>
         <div class="page_center">
-            <!-- <img src="src/logo_simple_black.svg" class="titleimage" style="object-position:100% 0%;"> -->
+            <div class="titleimagewrapper">
+                <img src="src/logo_simple_black.svg" class="titleimage"
+                    style="object-position:50% 100%;bottom: 0;height: 0;">
+            </div>
             <div style="visibility: hidden;">
                 <div class="titlecaption">第70回筑駒文化祭</div>
                 <div class="video">
@@ -67,7 +72,9 @@
             <img src="src/hp_background.gif" class="topimage">
             <div class="bg_dot"></div>
             <div class="title">
-                <img src="src/logo_simple.svg" class="titleimage" style="visibility: hidden;">
+                <div class="titleimagewrapper">
+                    <img src="src/logo_simple.svg" class="titleimage" style="visibility: hidden;">
+                </div>
                 <div class="titlecaption">第70回筑駒文化祭</div>
                 <div class="video">
                     <a><img src="src/watch.svg" class="watch"></a>
@@ -128,7 +135,7 @@
                 let windowHeight = window.innerHeight;
                 let basho = windowHeight / 2 - vid.getBoundingClientRect().top;
                 basho /= windowHeight
-                console.log(basho)
+                // console.log(basho)
                 if (basho >= -.1) {
                     moji.style.opacity = 0
                     vid.style.opacity = 0
@@ -140,15 +147,34 @@
             {
                 let logo = document.getElementsByClassName("titleimage")[0];
                 let logo2 = document.getElementsByClassName("titleimage")[1];
-                let haikei = document.getElementsByClassName('topimage')[0];
+                let haikei = document.getElementsByClassName('top')[0];
                 let windowHeight = window.innerHeight;
+                let windowWidth = window.innerWidth;
                 let kyoukai = haikei.getBoundingClientRect().bottom;
                 let ichi1 = logo.getBoundingClientRect().top;
                 let ichi2 = logo2.getBoundingClientRect().bottom;
-
-
+                console.log(kyoukai);
+                $(logo).height(Math.min(Math.max(0, kyoukai - ichi1), Math.min(Math.max(windowWidth * .2, 150)) * 150 / 217));
+                $(logo2).height(Math.min(Math.max(0, ichi2 - kyoukai), Math.min(Math.max(windowWidth * .2, 150)) * 150 / 217));
             }
         }
+        window.addEventListener('DOMContentLoaded', function () {
+            window.addEventListener('resize', function () {
+                {
+                    let logo = document.getElementsByClassName("titleimage")[0];
+                    let logo2 = document.getElementsByClassName("titleimage")[1];
+                    let haikei = document.getElementsByClassName('top')[0];
+                    let windowHeight = window.innerHeight;
+                    let windowWidth = window.innerWidth;
+                    let kyoukai = haikei.getBoundingClientRect().bottom;
+                    let ichi1 = logo.getBoundingClientRect().top;
+                    let ichi2 = logo2.getBoundingClientRect().bottom;
+                    console.log(kyoukai);
+                    $(logo).height(Math.min(Math.max(0, kyoukai - ichi1), Math.min(Math.max(windowWidth * .2, 150)) * 150 / 217));
+                    $(logo2).height(Math.min(Math.max(0, ichi2 - kyoukai), Math.min(Math.max(windowWidth * .2, 150)) * 150 / 217));
+                }
+            });
+        });
 //TK73:@otameshicpp(AndrewK),@Goddess_soa( (S _ S) )
 
     </script>
