--- a/index.html
+++ b/index.html
@@ -50,38 +50,40 @@
         <div class="page_center">
             <div>
                 <div class="titleimagewrapper">
-                    <img src="src/logo_simple.svg" class="titleimage" style="object-position:50% 0%;top:0;">
+                    <img src="src/logo_simple.svg" class="titleimage" style="object-position:50% 0%;top:0;"
+                        alt="logo-image(white)">
                 </div>
             </div>
             <div style="visibility: hidden;">
                 <div class="titlecaption">第70回筑駒文化祭</div>
                 <div class="video">
-                    <a><img src="src/watch.svg" class="watch"></a>
+                    <a><img src="src/watch.svg" class="watch" alt="watch-the-video-img"></a>
                 </div>
             </div>
         </div>
         <div class="page_center">
             <div class="titleimagewrapper">
                 <img src="src/logo_simple_black.svg" class="titleimage"
-                    style="object-position:50% 100%;bottom: 0;height: 0;">
+                    style="object-position:50% 100%;bottom: 0;height: 0;" alt="logo-image(black)">
             </div>
             <div style="visibility: hidden;">
                 <div class="titlecaption">第70回筑駒文化祭</div>
                 <div class="video">
-                    <a><img src="src/watch.svg" class="watch"></a>
+                    <a><img src="src/watch.svg" class="watch" alt="watch-the-video-img"></a>
                 </div>
             </div>
         </div>
         <div class="top" style="overflow: hidden;">
-            <img src="src/hp_background.gif" class="topimage">
+            <img src="src/hp_background.gif" class="topimage" alt="background-gif">
             <div class="bg_dot"></div>
             <div class="title">
                 <div class="titleimagewrapper">
-                    <img src="src/logo_simple.svg" class="titleimage" style="visibility: hidden;">
+                    <img src="src/logo_simple.svg" class="titleimage" style="visibility: hidden;"
+                        alt="logo-image(white)">
                 </div>
                 <div class="titlecaption">第70回筑駒文化祭</div>
                 <div class="video">
-                    <a><img src="src/watch.svg" class="watch"></a>
+                    <a><img src="src/watch.svg" class="watch" alt="watch-the-video-img"></a>
                 </div>
             </div>
             <div id="PV">
