--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="top" style="overflow: hidden;">
-            <img src="src/hp_background.gif" class="topimage" alt="background-gif">
+            <video src="src/hp_background.mp4" class="topimage" alt="background-gif" muted autoplay loop></video>
             <div class="bg_dot"></div>
             <div class="title">
                 <div class="titleimagewrapper">
