--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
         </div>
 
         <div class="desc-wrapper">
-            <h2 class="desc-title">ホログラム</h2>
-            <h2 class="desc-title" style="font-size: 1.6rem;">プロジェクションマッピング</h2>
-            <h2 class="desc-title">動画</h2>
+            <img src="images/hologram.png" class="desc-title">
+            <img src="images/proj.png" class="desc-title"></h2>
+            <img src="images/ar.png" class="desc-title"></h2>
             <h2 class="desc-title">3Dプリンタ</h2>
-            <a class="desc-text">浮いてます浮いてます浮いてます浮いてます浮いてます浮いてます浮いてます浮いてます</a>
-            <a class="desc-text">立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体</a>
-            <a class="desc-text">動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く</a>
-            <a class="desc-text">印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷</a>
+            <a class="desc-text">浮いてます浮いてます浮いてます浮いてます浮いてます浮いてます浮いてます浮いてます<br><button class="desc-btn">詳細</button></a>
+            <a class="desc-text">立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体立体<br><button class="desc-btn">詳細</button></a>
+            <a class="desc-text">動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く動く<br><button class="desc-btn">詳細</button></a>
+            <a class="desc-text">印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷印刷<br><button class="desc-btn">詳細</button></a>
             <div class="hider"></div>
         </div>
 
