--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
     </header>
-    <div class="content">
+    <div class="content" style="height:200vh;">
         <div class="page_center">
             <div>
                 <div class="titleimagewrapper">
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <div class="desc-wrapper">
+        <div class="desc-wrapper" style="display: none;">
             <img src="images/hologram.png" class="desc-title">
             <img src="images/proj.png" class="desc-title"></h2>
             <img src="images/ar.png" class="desc-title"></h2>
