--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
             <div class="desc-titlewrapper">
                 <h2 class="desc-title">3Dプリンタ</h2>
             </div>
-            <a class="desc-text" style="color: white;">CG研に訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
+            <a class="desc-text" style="color: white;">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
                 <div class="setsumei" style="color: pink;">空中に浮かぶ数々の幻想を</div><button class="desc-btn">詳細</button>
             </a>
-            <a class="desc-text">CG研に訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
+            <a class="desc-text">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
                 <div class="setsumei" style="color: navy;">物理法則の限界を超える物体を</div><button class="desc-btn">詳細</button>
             </a>
-            <a class="desc-text">CG研に訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
+            <a class="desc-text">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
                 <div class="setsumei" style="color: darkolivegreen;">三次元の世界に現れる夢を</div><button
                     class="desc-btn">詳細</button>
             </a>
-            <a class="desc-text">CG研に訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
+            <a class="desc-text">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
                 <div class="setsumei" style="color: darkslategray;">照らし出される無垢のオブジェを</div><button
                     class="desc-btn">詳細</button>
             </a>
