--- a/hologram.html
+++ b/hologram.html
@@ -49,12 +49,22 @@
         <div id="AR-show">
             <div class="modelcontainer">
                 <h1 class="model">歯車</h1>
-                <!-- <video src=""></video> -->
+                <video muted autoplay loop src="./src/0001-0240_b.mp4" class="holovideo"></video>
                 <h1 id="batsu">×</h1>
             </div>
         </div>
         <div
             style="display: flex; height: 60vw; width: 80vw; margin:auto; padding-top: 5vh; margin-top: 5vh; margin-bottom: 5vh; border-top: #ffffff solid; word-break: normal; flex-wrap: wrap; justify-content: center; align-content: center;">
+            <div class="model-data-container">
+                <p class="modelData">リンゴ</p>
+                <p class="modelData">リンゴ</p>
+                <img class="AR-thumbnail" src="thumbnails/apple.png">
+            </div>
+            <div class="model-data-container">
+                <p class="modelData">リンゴ</p>
+                <p class="modelData">リンゴ</p>
+                <img class="AR-thumbnail" src="thumbnails/apple.png">
+            </div>
             <div class="model-data-container">
                 <p class="modelData">リンゴ</p>
                 <p class="modelData">リンゴ</p>
@@ -285,7 +295,7 @@
             width: 0;
             height: 0;
             opacity: 0;
-            background-color: #1A1A1A;
+            background-color: black;
             z-index: 0;
             position: fixed;
         }
