--- a/hologram.html
+++ b/hologram.html
@@ -66,9 +66,9 @@
                 <img class="AR-thumbnail" src="thumbnails/apple.png">
             </div>
             <div class="model-data-container">
-                <p class="modelData">リンゴ</p>
-                <p class="modelData">ringo</p>
-                <img class="AR-thumbnail" src="thumbnails/apple.png">
+                <p class="modelData">縄文土器</p>
+                <p class="modelData">doki-hologram</p>
+                <img class="AR-thumbnail" src="thumbnails/doki.png">
             </div>
             <!-- <div class="model-data-container">
                 <p class="modelData">panda</p>
