--- a/hologram.html
+++ b/hologram.html
@@ -48,7 +48,7 @@
         </div>
         <div id="AR-show">
             <div class="modelcontainer">
-                <h1 class="model">歯車</h1>
+                <h1 class="model" style="display: none;">歯車</h1>
                 <video muted autoplay loop src="./src/0001-0240_b.mp4" class="holovideo"></video>
                 <h1 id="batsu">×</h1>
             </div>
@@ -61,41 +61,10 @@
                 <img class="AR-thumbnail" src="thumbnails/apple.png">
             </div>
             <div class="model-data-container">
-                <p class="modelData">リンゴ</p>
-                <p class="modelData">ringo</p>
-                <img class="AR-thumbnail" src="thumbnails/apple.png">
-            </div>
-            <div class="model-data-container">
                 <p class="modelData">縄文土器</p>
                 <p class="modelData">doki-hologram</p>
                 <img class="AR-thumbnail" src="thumbnails/doki.png">
             </div>
-            <!-- <div class="model-data-container">
-                <p class="modelData">panda</p>
-                <p class="modelData">パンダ</p>
-                <img class="AR-thumbnail" src="thumbnails/panda_thumbnail.png">
-            </div>
-            <div class="model-data-container">
-                <p class="modelData">mouse_machine_final</p>
-                <p class="modelData">マウス</p>
-                <img class="AR-thumbnail" src="thumbnails/mouse_thumbnail.png">
-            </div>
-            <br>
-            <div class="model-data-container">
-                <p class="modelData">sofa</p>
-                <p class="modelData">ソファー</p>
-                <img class="AR-thumbnail" src="thumbnails/sofa_thumbnail.png">
-            </div>
-            <div class="model-data-container">
-                <p class="modelData">pengin</p>
-                <p class="modelData">ペンギン</p>
-                <img class="AR-thumbnail" src="thumbnails/pengin_thumbnail.png">
-            </div>
-            <div class="model-data-container">
-                <p class="modelData">elephant</p>
-                <p class="modelData">ゾウ</p>
-                <img class="AR-thumbnail" src="thumbnails/elephant_thumbnail.png">
-            </div> -->
         </div>
 
         <div>
