--- a/index.html
+++ b/index.html
@@ -102,15 +102,16 @@
                     onclick="location.href='./hologram.html'">詳細</button>
             </a>
             <a class="desc-text">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
-                <div class="setsumei" style="color: navy;">物理法則の限界を超える物体を</div><button class="desc-btn">詳細</button>
+                <div class="setsumei" style="color: navy;">物理法則の限界を超える物体を</div>
+                <!-- <button class="desc-btn">詳細</button> -->
             </a>
             <a class="desc-text">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
-                <div class="setsumei" style="color: darkolivegreen;">三次元の世界に現れる夢を</div><button
-                    class="desc-btn">詳細</button>
+                <div class="setsumei" style="color: darkolivegreen;">三次元の世界に現れる夢を</div>
+                <!-- <button class="desc-btn">詳細</button> -->
             </a>
             <a class="desc-text">CG研を訪れたあなたはきっと目にすることだろう<div style="height: 3vh;"></div>
-                <div class="setsumei" style="color: darkslategray;">照らし出される無垢のオブジェを</div><button
-                    class="desc-btn">詳細</button>
+                <div class="setsumei" style="color: darkslategray;">照らし出される無垢のオブジェを</div>
+                <!-- <button class="desc-btn">詳細</button> -->
             </a>
             <!-- <img src="src/suna.gif" class="desc-background"
                 style="background-color: black;opacity: .2;transition:opacity ease .7s;height: 100vmax;width: auto;"> -->
