--- a/hologram.html
+++ b/hologram.html
@@ -65,6 +65,11 @@
                 <p class="modelData">doki-hologram</p>
                 <img class="AR-thumbnail" src="thumbnails/doki.png">
             </div>
+            <div class="model-data-container">
+                <p class="modelData">キューブ</p>
+                <p class="modelData">cube</p>
+                <img class="AR-thumbnail" src="thumbnails/cube.png">
+            </div>
         </div>
 
         <div>
