add heli and kinkaku

--- a/hologram.html
+++ b/hologram.html
@@ -49,7 +49,7 @@
         <div id="AR-show">
             <div class="modelcontainer">
                 <h1 class="model" style="display: none;">歯車</h1>
-                <video muted autoplay loop src="./src/0001-0240_b.mp4" class="holovideo"></video>
+                <video muted autoplay loop controls src="./src/0001-0240_b.mp4" class="holovideo"></video>
                 <h1 id="batsu">×</h1>
             </div>
         </div>
@@ -69,6 +69,17 @@
                 <p class="modelData">キューブ</p>
                 <p class="modelData">cube</p>
                 <img class="AR-thumbnail" src="thumbnails/cube.png">
+            </div>
+            <br>
+            <div class="model-data-container">
+                <p class="modelData">金の寺</p>
+                <p class="modelData">kinkaku</p>
+                <img class="AR-thumbnail" src="thumbnails/kinkaku.png">
+            </div>
+            <div class="model-data-container">
+                <p class="modelData">ヘリコプター</p>
+                <p class="modelData">heli</p>
+                <img class="AR-thumbnail" src="thumbnails/heli.png">
             </div>
         </div>
 
