--- a/hologram.html
+++ b/hologram.html
@@ -49,7 +49,8 @@
         <div id="AR-show">
             <div class="modelcontainer">
                 <h1 class="model" style="display: none;">歯車</h1>
-                <video muted autoplay loop controls src="./src/0001-0240_b.mp4" class="holovideo"></video>
+                <video loading="lazy" muted autoplay loop controls src="./src/0001-0240_b.mp4"
+                    class="holovideo"></video>
                 <h1 id="batsu">×</h1>
             </div>
         </div>
