--- a/hologram.html
+++ b/hologram.html
@@ -82,6 +82,11 @@
                 <p class="modelData">heli</p>
                 <img class="AR-thumbnail" src="thumbnails/heli.png">
             </div>
+            <div class="model-data-container">
+                <p class="modelData">本</p>
+                <p class="modelData">hase-book</p>
+                <img class="AR-thumbnail" src="thumbnails/book.png">
+            </div>
         </div>
 
         <div>
